Adding initial content

--- a/index.html
+++ b/index.html
@@ -1,7 +1,240 @@
 ---
-layout: default
-title: Linda Ilonze
 ---
-<div class="blurb">
-	<h1>Hi there, I'm Linda Ilonze!</h1>
-</div><!-- /.blurb -->
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <title>Linda Ilonze</title>
+
+  <!-- CSS -->
+  <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
+  <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <link href="css/nivo-lightbox.css" rel="stylesheet" />
+  <link href="css/nivo-lightbox-theme/default/default.css" rel="stylesheet" type="text/css" />
+  <link href="css/owl.carousel.css" rel="stylesheet" media="screen" />
+  <link href="css/owl.theme.css" rel="stylesheet" media="screen" />
+  <link href="css/animate.css" rel="stylesheet" />
+  <link href="css/style.css" rel="stylesheet">
+  <link href="color/default.css" rel="stylesheet">
+  
+</head>
+
+<body id="page-top" data-spy="scroll" data-target=".navbar-custom">
+  <!-- Preloader -->
+  <div id="preloader" class="animated">
+    <div id="load" class="animated" > </div>
+  </div>
+
+  <!-- Section: intro -->
+  <section id="intro" class="intro">
+
+    <div class="slogan">
+      	<a href="index.html">
+			<h3> LINDA ILONZE </h3>
+		  	<h3>&lt;coder&gt; </h3>
+		  <!-- <h4> </h4> -->
+		  <a href="https://twitter.com/lynndah212" target="_blank" class="btn btn-primary outline" ><i class="fa fa-2x fa-twitter animated"> </i> </a> 
+		  <a href="https://github.com/linda-ilonze"target="_blank" class="btn btn-primary outline" > <i class="fa fa-2x fa-github animated"> </i> </a>
+		  <a href="https://github.com/linda-ilonze"target="_blank" class="btn btn-primary outline" > <i class="fa fa-2x fa-linkedin animated"> </i> </a>
+		</a>
+    </div>
+    <div class="page-scroll">
+      	<a href="#about">
+			<i class="fa fa-angle-down fa-5x animated"></i>
+		</a>
+    </div>
+  </section>
+  <!-- /Section: intro -->
+
+  <!-- Navigation -->
+  <div id="navigation">
+    <nav class="navbar navbar-custom" role="navigation">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#menu">
+                                                <i class="fa fa-bars"></i>
+                                                </button>
+            </div>
+            <div class="collapse navbar-collapse" id="menu">
+              <ul class="nav navbar-nav">
+                <li class="active"><a href="#intro">Home</a></li>
+                <li><a href="#about">About Me</a></li>
+                <!-- <li><a href="#skills">Skills</a></li> -->
+              </ul>
+            </div>
+            <!-- /.Navbar-collapse -->
+
+          </div>
+        </div>
+      </div>
+      <!-- /.container -->
+    </nav>
+  </div>
+  <!-- /Navigation -->
+
+  <!-- Section: about -->
+  <section id="about" class="home-section">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 col-lg-offset-2">
+	        <div class="section-heading text-center">
+				<div >
+				<h2>About me</h2>
+				</div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+
+          <img src="img/img1.jpg" class="img-responsive img-rounded" alt="" />
+        </div>
+        <div class="col-md-6">
+        <p>
+          I'm a full stack developer who focuses on writing clean, elegant, efficient code. 
+          I enjoy turning complex problems into simple, beautiful and intuitive software. 
+          I am proficient in Javascript(React), Java and C#.
+        </p>
+        <p>
+          I am the organiser of <a href=""> London Women in Blockchain meetup</a> 
+          check out the upcoming events on the meetup page.
+        </p>
+          <blockquote>
+			“Truth can only be found in one place: the code.” 
+			― Robert C. Martin
+          </blockquote>
+         </div>
+      </div>
+    </div>
+  </section>
+  <!-- /Section: about -->
+
+  <!-- Section: separator -->
+  <section id="separator" class="home-section parallax text-center">
+
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-6 col-sm-3 col-md-3">
+          <div class="align-center txt-shadow">
+            <div class="icon">
+              <i class="fa fa-graduation-cap fa-5x"></i>
+            </div>
+            <span class="color-white">Bachelor of Engineering </span>
+          </div>
+        </div>
+        <div class="col-xs-6 col-sm-3 col-md-3">
+          <div class="align-center txt-shadow">
+            <div class="icon">
+              <i class="fa fa-plane fa-5x"></i>
+            </div>
+            <span class="color-white">I love traveling</span>
+          </div>
+		</div>
+		<div class="col-xs-6 col-sm-3 col-md-3">
+				<div class="align-center txt-shadow">
+				  <div class="icon">
+					<i class="fa fa-bicycle fa-5x"></i>
+				  </div>
+				  <span class="color-white">I love exercise</span>
+				</div>
+			  </div>
+        <div class="col-xs-6 col-sm-3 col-md-3">
+          <div class="align-center txt-shadow">
+            <div class="icon">
+              <i class="fa fa-camera fa-5x"></i>
+            </div>
+            <span class="color-white">I love photography</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- /Section: separator -->
+
+
+  <!-- Section: gallery -->
+  <!-- <section id="skills" class="home-section text-center bg-gray">
+
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 col-lg-offset-2">
+          <div class="wow bounceInDown" data-wow-delay="0.4s">
+            <div class="section-heading">
+			  <h2>Skills</h2>
+			  
+			  	<div class="col-md-2">
+                    <span class="chart" data-percent="95">
+                      <span class="percent">95</span>
+                    <h3>Tea Drinking</h3>
+                    <canvas height="300" width="300" style="height: 150px; width: 150px;"></canvas></span>
+            	</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12 col-md-12 col-lg-12">
+          <div class="wow bounceInUp" data-wow-delay="0.4s">
+            <div id="owl-works" class="owl-carousel">
+              <div class="item"><a href="img/gallery/1.jpg" title="This is an image title" data-lightbox-gallery="gallery1"><img src="img/gallery/1.jpg" class="img-responsive" alt="img"></a></div>
+              <div class="item"><a href="img/gallery/2.jpg" title="This is an image title" data-lightbox-gallery="gallery1"><img src="img/gallery/2.jpg" class="img-responsive " alt="img"></a></div>
+              <div class="item"><a href="img/gallery/3.jpg" title="This is an image title" data-lightbox-gallery="gallery1"><img src="img/gallery/3.jpg" class="img-responsive " alt="img"></a></div>
+              <div class="item"><a href="img/gallery/4.jpg" title="This is an image title" data-lightbox-gallery="gallery1"><img src="img/gallery/4.jpg" class="img-responsive " alt="img"></a></div>
+              <div class="item"><a href="img/gallery/5.jpg" title="This is an image title" data-lightbox-gallery="gallery1"><img src="img/gallery/5.jpg" class="img-responsive " alt="img"></a></div>
+              <div class="item"><a href="img/gallery/6.jpg" title="This is an image title" data-lightbox-gallery="gallery1"><img src="img/gallery/6.jpg" class="img-responsive " alt="img"></a></div>
+              <div class="item"><a href="img/gallery/7.jpg" title="This is an image title" data-lightbox-gallery="gallery1"><img src="img/gallery/7.jpg" class="img-responsive " alt="img"></a></div>
+              <div class="item"><a href="img/gallery/8.jpg" title="This is an image title" data-lightbox-gallery="gallery1"><img src="img/gallery/8.jpg" class="img-responsive " alt="img"></a></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section> -->
+  <!-- /Section: gallery -->
+
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 col-lg-12">
+          <p>&copy; Linda Ilonze 2017 </p>
+          <div class="credits">
+		  </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+
+  <!-- Library JavaScript Files -->
+  <script src="lib/jquery.min.js"></script>
+  <script src="lib/bootstrap.min.js"></script>
+  <script src="lib/jquery.easing.min.js"></script>
+  <script src="lib/jquery.sticky.js"></script>
+  <script src="lib/jquery.scrollTo.js"></script>
+  <script src="lib/stellar.js"></script>
+  <script src="lib/wow.min.js"></script>
+  <script src="lib/owl.carousel.min.js"></script>
+  <script src="lib/nivo-lightbox.min.js"></script>
+
+
+  <script src="js/custom.js"></script>
+
+</body>
+
+</html>
+
+
+
